<resources>
    <string name="app_name">Lostie</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="watch">Часы</string>
    <string name="find">Найти</string>
    <string name="last_member">Последнее местоположение</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="returnMenu">returnBack</string>
    <string name="title_activity_objectfinall">objectfinall</string>
    <string name="change">Изменить</string>
    <string name="delete">Удалить</string>
</resources>