<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".object1">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="389dp"
        android:layout_height="179dp"
        android:layout_marginTop="72dp"
        android:background="@color/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="177dp"
            android:layout_height="126dp"
            android:translationX="170dp"
            android:translationY="20dp"
            app:srcCompat="@drawable/watch" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:translationX="60dp"
            android:translationY="70dp" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="572dp"
        android:fontFamily="@font/permanent_marker"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="50dp"
        android:text="@string/find"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="50dp"
        android:text="@string/last_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"/>

    <FrameLayout
        android:layout_width="411dp"
        android:layout_height="58dp"
        android:background="@color/viget_layout"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="58dp"
            android:layout_height="match_parent"
            android:background="@color/viget_layout"
            android:contentDescription="@string/returnMenu"
            android:onClick="returnMenu"
            app:srcCompat="@android:drawable/ic_menu_revert" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>